@@ -1,8 +1,7 @@
 var util = require("util"),
-    EventEmitter = require("events").EventEmitter,
     Gzip = require("gzbz2").Gzip,
     Request = require("./request"),
-    mock = require("./mock");
+    Stream = require("./mock").Stream;
 
 /**
  * A middleware that gzip encodes the body of the response on the fly if the
@@ -21,15 +20,12 @@ module.exports = function (app, typeMatcher) {
 
                 // Make sure the client accepts gzip encoding first.
                 if (req.acceptEncoding("gzip")) {
-                    if (typeof body == "string") {
-                        body = new mock.Stream(body);
-                    }
-
                     // Wrap the original body in a gzip.Body.
                     body = new Body(body);
 
                     headers["Content-Encoding"] = "gzip";
 
+                    // TODO: Can we calculate the correct length here?
                     if ("Content-Length" in headers) {
                         delete headers["Content-Length"];
                     }
@@ -45,19 +41,27 @@ module.exports = function (app, typeMatcher) {
  * A small wrapper class for streams that gzip's the data on the way through.
  */
 function Body(body) {
-    var compressor = new Gzip;
-    compressor.init();
+    var gzip = new Gzip;
+    gzip.init();
 
-    var self = this;
+    this.write = function (chunk) {
+        if (typeof chunk == "string") {
+            chunk = new Buffer(chunk);
+        }
 
-    body.on("data", function (chunk) {
-        self.emit("data", compressor.deflate(chunk));
-    });
+        Stream.prototype.write.call(this, gzip.deflate(chunk));
+    }
 
-    body.on("end", function () {
-        self.emit("data", compressor.end());
-        self.emit("end");
-    });
+    this.end = function (chunk) {
+        if (chunk) {
+            this.write(chunk);
+        }
+
+        Stream.prototype.write.call(this, gzip.end());
+        Stream.prototype.end.call(this);
+    }
+
+    Stream.call(this, body);
 }
 
-util.inherits(Body, EventEmitter);
+util.inherits(Body, Stream);
