@@ -4,7 +4,7 @@ var util = require("util"),
     url = require("url"),
     EventEmitter = require("events").EventEmitter,
     utils = require("./utils"),
-    Input = require("./input");
+    mock = require("./mock");
 
 /**
  * The current version of Strata as [major, minor, patch].
@@ -155,10 +155,6 @@ function createServer(app, opts) {
 function makeEnv(opts) {
     opts = opts || {};
 
-    if (!(opts.input instanceof EventEmitter)) {
-        throw new StrataError("Input must be an EventEmitter");
-    }
-
     var env = {};
 
     env.protocol = opts.protocol || "http:";
@@ -191,7 +187,7 @@ function makeEnv(opts) {
     delete env.httpContentLength;
 
     env.strataVersion = exports.version;
-    env.input = new Input(opts.input);
+    env.input = new mock.Stream(opts.input || "");
     env.error = opts.error || process.stderr;
 
     return env;
@@ -255,7 +251,6 @@ function handleError(error, env, callback) {
 var propPaths = {
     // Constructors
     "Builder": "builder",
-    "Input": "input",
     "Mapper": "mapper",
     "Request": "request",
     "Response": "response",
