@@ -1,5 +1,5 @@
 var util = require("util"),
-    EventEmitter = require("events").EventEmitter;
+    Stream = require("./mock").Stream;
 
 /**
  * A middleware that wraps the response body in a JavaScript callback function
@@ -15,11 +15,7 @@ module.exports = function (app, callbackName) {
     return function jsonp(env, callback) {
         app(env, function (status, headers, body) {
             if (headers["Content-Type"] === "application/json") {
-                if (typeof body == "string") {
-                    body = header + body + footer;
-                } else {
-                    body = new Body(header, footer, body);
-                }
+                body = new Body(header, footer, body);
 
                 // It's JavaScript now!
                 headers["Content-Type"] = "application/javascript";
@@ -43,22 +39,27 @@ module.exports = function (app, callbackName) {
  * and +footer+ on the way through.
  */
 function Body(header, footer, body) {
-    var headerSent = false,
-        self = this;
+    var headerSent = false;
 
-    body.on("data", function (chunk) {
+    this.write = function (chunk) {
         if (!headerSent) {
-            self.emit("data", header);
+            Stream.prototype.write.call(this, header);
             headerSent = true;
         }
 
-        self.emit("data", chunk);
-    });
+        Stream.prototype.write.call(this, chunk);
+    }
 
-    body.on("end", function () {
-        self.emit("data", footer);
-        self.emit("end");
-    });
+    this.end = function (chunk) {
+        if (chunk) {
+            this.write(chunk);
+        }
+
+        Stream.prototype.write.call(this, footer);
+        Stream.prototype.end.call(this);
+    }
+
+    Stream.call(this, body);
 }
 
-util.inherits(Body, EventEmitter);
+util.inherits(Body, Stream);
