@@ -1,6 +1,7 @@
 var util = require("util"),
     url = require("url"),
     EventEmitter = require("events").EventEmitter,
+    Stream = require("stream").Stream,
     assert = require("assert"),
     strata = require("./index"),
     lint = require("./lint"),
@@ -63,9 +64,6 @@ function request(opts, app, callback) {
  * A wrapper for +strata.env+ that allows a URL string to be given as +opts+
  * instead of a traditional object. This string will be used for the protocol,
  * serverName, serverPort, pathInfo, and queryString environment variables.
- *
- * Also, if +opts+ is an object it may specify a plain string as input and it
- * will automatically be wrapped in a MockStream.
  */
 function makeEnv(opts) {
     opts = opts || {};
@@ -83,64 +81,109 @@ function makeEnv(opts) {
         };
     }
 
-    // Wrap String inputs in a MockStream.
-    if (opts.input) {
-        if (typeof opts.input == "string") {
-            opts.input = new MockStream(opts.input);
-        } else if (!(opts.input instanceof EventEmitter)) {
-            throw new strata.Error("Input must be an EventEmitter or String");
-        }
-    } else {
-        opts.input = new MockStream;
-    }
-
     return strata.env(opts);
 }
 
 /**
- * Imitates a stream that emits the given +string+.
+ * A constructor that inherits from Stream and emits data from the given
+ * `source`. If it's a Stream it will be piped through to this stream.
+ * Otherwise, it should be a string or a Buffer which will be emitted by this
+ * stream as soon as possible.
  */
-function MockStream(string) {
-    EventEmitter.call(this);
+function MockStream(source) {
+    Stream.call(this);
 
-    string = string || "";
-
-    this.encoding = null;
+    this._chunks = [];
     this._wait = false;
-
+    this.encoding = null;
     this.readable = true;
-    this.writable = false;
+    this.writable = true;
 
-    var buffer = new Buffer(string),
-        self = this;
+    var self = this;
 
     process.nextTick(function () {
-        if (self._wait) {
+        if (self.readable || self._chunks.length) {
+            var hasData = self._chunks.length != 0;
+
+            var chunk;
+            while (self.readable && self._chunks.length && !self._wait) {
+                chunk = self._chunks.shift();
+
+                if (self.encoding) {
+                    self.emit("data", chunk.toString(self.encoding));
+                } else {
+                    self.emit("data", chunk);
+                }
+            }
+
+            if (hasData && self._chunks.length == 0) {
+                self.emit("drain");
+            }
+
             process.nextTick(arguments.callee);
-            return;
         }
-
-        if (self.encoding) {
-            self.emit("data", buffer.toString(self.encoding));
-        } else {
-            self.emit("data", buffer);
-        }
-
-        self.emit("end");
-        self.readable = false;
     });
+
+    if (source instanceof Stream) {
+        source.pipe(this);
+    } else {
+        this.end(source);
+    }
 }
 
-util.inherits(MockStream, EventEmitter);
+util.inherits(MockStream, Stream);
 
-MockStream.prototype.setEncoding = function (encoding) {
+MockStream.prototype.setEncoding = function setEncoding(encoding) {
     this.encoding = encoding;
 }
 
-MockStream.prototype.pause = function () {
+MockStream.prototype.pause = function pause() {
     this._wait = true;
+    this.emit("pause");
 }
 
-MockStream.prototype.resume = function () {
+MockStream.prototype.resume = function resume() {
     this._wait = false;
+    this.emit("resume");
+}
+
+MockStream.prototype.write = function write(chunk) {
+    if (typeof chunk == "string") {
+        chunk = new Buffer(chunk);
+    }
+
+    this._chunks.push(chunk);
+}
+
+MockStream.prototype.end = function end(chunk) {
+    if (chunk) {
+        this.write(chunk);
+    }
+
+    var self = this;
+
+    this.destroySoon(function () {
+        self.emit("end");
+    });
+}
+
+MockStream.prototype.destroy = function destroy() {
+    this._chunks = [];
+    this.readable = false;
+    this.writable = false;
+}
+
+MockStream.prototype.destroySoon = function destroySoon(callback) {
+    var self = this;
+
+    process.nextTick(function () {
+        if (self._chunks.length == 0) {
+            self.destroy();
+            if (typeof callback == "function") {
+                callback();
+            }
+        } else {
+            process.nextTick(arguments.callee);
+        }
+    });
 }
